Fix red unread dit appearing out of place on mobile

--- a/app/javascript/src/styles/common/page_header.scss
+++ b/app/javascript/src/styles/common/page_header.scss
@@ -97,7 +97,9 @@ header#top {
       color: red;
 
       position: absolute;
-      top: -3px;
+      @include window-larger-than(800px) {
+        top: -3px;
+      }
     }
   }
 
